Fix dark mode activity contrast, change ordering of community themes

--- a/app/assets/elements/activity.scss
+++ b/app/assets/elements/activity.scss
@@ -39,7 +39,7 @@
     align-items: center;
     gap: var(--space-xs);
     font-size: var(--font-size-s);
-    /* color: var(--color-text-lightest); */
+    color: var(--color-text-lighter);
     margin-bottom: var(--space-xxs);
   }
 
@@ -51,10 +51,6 @@
     padding-left: 21px;
     color: var(--color-text-light);
   }
-  /*
-  &__icon {
-    color: var(--color-accent);
-  } */
 }
 
 @keyframes audio-bar-bounce {
